--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,45 @@
 /* Font: Montserrat Black for titles, Montserrat Regular for all other text.
 Colors: Red (#E9354C) and Grey (#AEB5BF) */
+
+html, body {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+/* ============ HEADER ================ */
+
+.header {
+    position: relative;
+}
+
+.background {
+    height: 1100px;
+    background-color: #E9354C;
+    clip-path: circle(81% at top);
+    transform: scaleX(1.8);
+}
+
+.image {
+    position: absolute;
+    top: -4%;
+}
+
+.image img {
+    width: 60%;
+}
+
+.video-container-one {
+    position: absolute;
+    min-width: 100%;
+    top: 50%;
+    padding: 0 15% 0 15%;
+    /* padding: 0 90px 0 90px; */
+}
+
+.embed-video {
+    min-width: 100%;
+    height: 620px;
+}
+
