--- a/styles.css
+++ b/styles.css
@@ -234,3 +234,25 @@ html, body {
     letter-spacing: 2px;
     color: white;
 }
+
+/* ========== footer =========== */
+
+.footer-title {
+    text-align: center;
+    margin: 6rem 0 0 0;
+}
+
+.footer-title h1 {
+    font-family: 'Montserrat Black', arial;
+    font-size: 3.6rem;
+    color: black;
+    text-transform: uppercase;
+    word-spacing: 2px;
+}
+
+.footer-title h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    color: black;
+    word-spacing: 2px;
+}
