--- a/styles.css
+++ b/styles.css
@@ -237,6 +237,10 @@ html, body {
 
 /* ========== footer =========== */
 
+.footer-container {
+    overflow: clip;
+}
+
 .footer-title {
     text-align: center;
     margin: 6rem 0 0 0;
@@ -255,4 +259,56 @@ html, body {
     font-size: 2.5rem;
     color: black;
     word-spacing: 2px;
+}
+
+.button {
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    text-transform: uppercase;
+    font-family: 'Montserrat Black', arial;
+    font-size: 2.7rem;
+    padding: 1.1rem 2rem;
+    color: white;
+    background-color: #E9354C;
+}
+
+/* .button:hover {
+    background-color: darkred;
+} */
+
+.row-button {
+    margin: 4rem 4rem 0 4rem;
+}
+
+.footer-col img {
+    margin-top: 4rem;
+    width: 100%;
+    height: 100%;
+    overflow: clip;
+}
+
+.final-kit-image {
+    transform: scale(1.6);
+}
+
+.row-design {
+    height: fit-content;
+}
+
+.row-last {
+    position: relative;
+}
+
+.design {
+    position: absolute;
+    bottom: -8rem;
+    z-index: -1;
+}
+
+.design-footer {
+    height: 350px;
+    background-color: #AEB5BF;
+    clip-path: circle(33% at bottom);
+    transform: scaleX(3);
 }
