--- a/styles.css
+++ b/styles.css
@@ -38,9 +38,22 @@ html, body {
     padding: 0 15% 0 15%;
 }
 
+.video-container-two {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    padding-top: 56.25%;
+}
+
 .embed-video {
-    min-width: 100%;
-    height: 620px;
+    position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
 /* ============ GET THE KIT SECTION ============ */
